Fix scrubber causing video player to shift up on hover
Deleted line where scrubber track grows when hovering

--- a/css/player.css
+++ b/css/player.css
@@ -178,7 +178,6 @@
   overflow: visible;
   transition: height 0.15s;
 }
-.scrubber-container:hover .scrubber-track { height: 6px; }
 
 .scrubber-buffer {
   position: absolute;
